--- a/src/components/view/DashboardMain/DashboardMain.css
+++ b/src/components/view/DashboardMain/DashboardMain.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", serif;
 }
 
 .dashboard-content{
@@ -47,4 +51,114 @@
 .small-div-content p{
   font-size: 12px;
   font-weight: 500;
+}
+
+.charts-container{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 20px;
+}
+.charts-container h2{
+  font-size: 13px;
+}
+.deviation-module h2,
+.grievance-module h2,
+.monitoring-module h2,
+.management-module h2,
+.finance-module h2 {
+  margin-bottom: 10px;
+}
+
+.thired-big-div{
+  display: flex;
+}
+.first-big-div{
+  width: 100%;
+  max-width: 50%;
+  min-width: 50%;
+}
+.first-big-div-wrapper{
+  margin-top: 15px;
+}
+.first-big-div-wrapper h2{
+  font-size: 15px;
+}
+.first-big-div-wrapper h3{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 13px;
+}
+.second-big-div{
+  width: 100%;
+  max-width: 50%;
+  min-width: 50%;
+}
+.three-div-wrapper{
+  display: flex;
+  column-gap: 10px;
+}
+.first-div{
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  width: 35%;
+}
+
+.first-div .head{
+  display: flex;
+ gap: 10px;
+ align-items: center;
+}
+.head img{
+  width: 40px;
+  height: 20px;
+}
+.ongoing-div{
+  width: 100%;
+  height: 130px;
+  background: #fff;
+  padding: 20px 20px;
+  border-radius: 5px;
+}
+.ongoing-div .heading-container{
+  display: flex;
+  gap: 25px;
+}
+.heading-container h2{
+  font-size: 10px;
+  font-weight: 400;
+}
+.heading-container img{
+  width: 25px;
+  height: 20px;
+}
+.ongoing-div p{
+  margin-top: 5px;
+  font-size: 8px;
+}
+.bottom-div{
+  display: flex;
+  margin-top: 10px;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 35px;
+}
+.bottom-div .left-bottom{
+  display: flex;
+  flex-direction: column;
+  /* gap: 5px; */
+}
+.bottom-div .right-img-div img{
+  width: 70px;
+}
+.second-big-div{
+  margin-top: 15px;
+}
+.second-big-div h2{
+  font-size: 15px;
+}
+.last-chart-wrapper h3{
+  font-size: 13px;
 }
