--- a/src/components/view/DashboardMain/DashboardMain.css
+++ b/src/components/view/DashboardMain/DashboardMain.css
@@ -86,6 +86,7 @@
 }
 .first-big-div-wrapper h2{
   font-size: 15px;
+  margin-bottom: 0;
 }
 .first-big-div-wrapper h3{
   margin-top: 10px;
@@ -114,8 +115,17 @@
  align-items: center;
 }
 .head img{
-  width: 40px;
+  width: 45px;
   height: 20px;
+}
+.message-img{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.message-img img{
+  width: 20px;
+  height: 17px;
 }
 .ongoing-div{
   width: 100%;
