--- a/src/components/view/Performance/Performance.css
+++ b/src/components/view/Performance/Performance.css
@@ -16,8 +16,13 @@
 .table-chart-wrapper{
   display: flex;
   align-items: center;
+  column-gap: 40px;
 }
 
+.performance-title{
+  font-size: 20px;
+  font-weight: 500;
+}
 .table-container {
   background-color: transparent;
   padding: 20px;
@@ -26,10 +31,11 @@
   min-width: 400px;
 }
 
-h2 {
+.table-container h2 {
   text-align: left;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-weight: 600;
 }
 
 .project-table {
@@ -37,18 +43,45 @@ h2 {
   border-collapse: collapse;
 }
 
+.project-table tr{
+  border: 1px solid #000;
+  text-align: left;
+  padding: 8px;
+}
 .project-table td {
   border: 1px solid #000;
   padding: 8px;
   text-align: left;
   font-size: 1rem;
+  color: #000;
 }
 
-.project-table td:first-child {
-  font-weight: bold;
-  /* background-color: #f9f9f9; */
-}
+
 .second-big-wrapper{
+  padding: 20px;
   display: flex;
-  column-gap: 15px;
+  column-gap: 55px;
+}
+.budget-heading h2{
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.rupees{
+  font-size: 13px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.progress-bar{
+  width: 300px;
+  height: 30px;
+  background-color: #B8CAF4;
+}
+.progressfill{
+  width: 250px;
+  height: 30px;
+  background-color: #2F69F4;
 }
