--- a/src/components/view/TaskTracking/TaskTracking.css
+++ b/src/components/view/TaskTracking/TaskTracking.css
@@ -35,6 +35,7 @@ display: flex;
 }
 .small-boxes-wrapper .wrapper-heading h2{
   font-size: 15px;
+  margin-bottom: 0;
 }
 .small-box{
   width: 100%;
@@ -50,6 +51,7 @@ display: flex;
 .small-box-heading h2{
   font-size: 12px;
   font-weight: 400;
+  margin-bottom: 5px;
 }
 .small-box-heading img{
   width: 25px;
@@ -61,7 +63,7 @@ display: flex;
 }
 .img-wrapper{
   display: flex;
-  /* margin-top: 10px; */
+  margin-top: 10px;
   /* justify-content: center; */
   align-items: center;
   gap: 110px;
