--- a/src/components/view/DocumentModule/DocumentModule.css
+++ b/src/components/view/DocumentModule/DocumentModule.css
@@ -15,7 +15,7 @@
   font-size: 20px;
   font-weight: 600;
 }
-.table-container {
+.doc-table-container {
   max-width: 1200px;
   background: #ffffff;
   border-radius: 25px;
