--- a/src/components/view/Performance/Performance.css
+++ b/src/components/view/Performance/Performance.css
@@ -13,6 +13,7 @@
   padding-right: 20px;
 }
 
+
 .table-chart-wrapper{
   display: flex;
   align-items: center;
@@ -21,14 +22,15 @@
 
 .performance-title{
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
 }
 .table-container {
   background-color: transparent;
   padding: 20px;
   border-radius: 8px;
-  max-width: 400px;
-  min-width: 400px;
+  width: 100%;
+  max-width: 38%;
+  min-width: 38%;
 }
 
 .table-container h2 {
@@ -52,7 +54,7 @@
   border: 1px solid #000;
   padding: 8px;
   text-align: left;
-  font-size: 1rem;
+  font-size: 13px;
   color: #000;
 }
 
