--- a/src/components/view/TaskTracking/TaskTracking.css
+++ b/src/components/view/TaskTracking/TaskTracking.css
@@ -12,16 +12,21 @@
   margin-left: auto;
   padding-right: 20px;
 }
+.task-module-heading{
+  font-size: 20px;
+  font-weight: 600;
+}
 .boxes-wrapper{
   display: flex;
   column-gap: 40px;
+  margin-top: 20px;
 }
 
 .small-boxes-wrapper{
   display: flex;
   flex-direction: column;
   row-gap: 15px;
-  width: 20%;
+  width: 25%;
 }
 
 .wrapper-heading{
@@ -35,18 +40,20 @@ display: flex;
 }
 .small-boxes-wrapper .wrapper-heading h2{
   font-size: 15px;
+  font-weight: 600;
   margin-bottom: 0;
 }
 .small-box{
   width: 100%;
-  height: 120px;
+  height: 110px;
   background: #fff;
   padding: 20px 20px;
   border-radius: 5px;
+  box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .small-box .small-box-heading{
   display: flex;
-  gap: 40px;
+  justify-content: space-between;
 }
 .small-box-heading h2{
   font-size: 12px;
@@ -64,9 +71,9 @@ display: flex;
 .img-wrapper{
   display: flex;
   margin-top: 10px;
-  /* justify-content: center; */
+  justify-content: space-between;
   align-items: center;
-  gap: 110px;
+  
 }
 .img-wrapper .left-img img{
   width: 70px;
