--- a/src/components/view/DeviationModule/DeviationModule.css
+++ b/src/components/view/DeviationModule/DeviationModule.css
@@ -1,19 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
-
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", serif;
 }
-.procure-content{
+.deviation-module-content{
   width: calc(100% - 220px);
   margin-left: auto;
   padding-right: 20px;
 }
-.procure-heading{
-  font-size: 20px;
-  font-weight: 600;
+.financial-procurement-progress-wrapper{
+  display: flex;
+  column-gap:20px;
+}
+
+.material-ESHS-asset-wrapper{
+  margin-top: 20px;
+  display: flex;
+  column-gap: 20px;
+}
+.financial-chart, 
+.procurement-chart, 
+.progress-chart, 
+.material-chart, 
+.eshs-chart, 
+.asset-chart{
+  overflow: hidden;
+  border-radius: 20px;
 }
