--- a/src/components/view/SchemeModule/SchemeModule.css
+++ b/src/components/view/SchemeModule/SchemeModule.css
@@ -11,7 +11,7 @@
   width: calc(100% - 220px);
   margin-left: auto;
   padding-right: 20px;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .scheme-header{
   font-size: 20px;
@@ -37,17 +37,18 @@
   font-weight: 500;
 }
 .scheme-three-box-wrapper{
-  width: 28%;
+  width: 25%;
   display: flex;
   flex-direction: column;
   row-gap: 15px;
 }
 .box{
   width: 100%;
-  height: 150px;
+  height: 140px;
   background: #fff;
   padding: 20px 20px;
   border-radius: 5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .box-heading{
   display: flex;
@@ -66,7 +67,7 @@
 }
 .box p{
   /* margin-top: 5px; */
-  font-size: 12px;
+  font-size: 11px;
 }
 .bottom-box{
   display: flex;
@@ -78,7 +79,10 @@
 .bottom-box .left-box{
   display: flex;
   flex-direction: column;
-  
+}
+.bottom-box .right-box img{
+  width: 65px;
+ 
 }
 .right-bottom-img{
   display: flex;
