--- a/src/components/view/DashboardMain/DashboardMain.css
+++ b/src/components/view/DashboardMain/DashboardMain.css
@@ -73,6 +73,9 @@
 .finance-module h2 {
   margin-bottom: 10px;
 }
+.management-module, .finance-module{
+  margin-top: 15px;
+}
 
 .thired-big-div{
   display: flex;
@@ -134,9 +137,9 @@
 }
 .ongoing-div{
   width: 100%;
-  height: 130px;
+  height: 120px;
   background: #fff;
-  padding: 20px 20px;
+  padding: 10px 15px;
   border-radius: 5px;
 }
 .ongoing-div .heading-container{
@@ -150,7 +153,7 @@
 }
 .heading-container img{
   width: 25px;
-  height: 20px;
+  height: 16px;
 }
 .ongoing-div p{
   /* margin-top: 5px; */
@@ -187,6 +190,12 @@
   font-size: 13px;
   font-weight: 600;
 }
+.deviation-module, .grievance-module{
+  width: 25%;
+}
+.monitoring-module, .management-module, .finance-module{
+  width: 25%;
+}
 .deviation-module-box,
 .grievance-module-box,
 .monitoring-module-box,
@@ -194,4 +203,7 @@
 .finance-module-box{
   overflow: hidden;
   border-radius: 20px;
+}
+@media(max-width: 1399px){
+
 }
