--- a/src/components/view/ReportModule/ReportModule.css
+++ b/src/components/view/ReportModule/ReportModule.css
@@ -22,7 +22,7 @@
 .report-three-box-wrapper{
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 28%;
   row-gap: 20px;
 }
 .report-wrapper-heading{
@@ -45,7 +45,7 @@
   min-width: 75%;
   max-width: 75%;
   height: 110px;
-  padding: 10px;
+  padding: 10px 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .report-img-name{
@@ -62,8 +62,9 @@
 }
 .report-img-name p{
   font-size: 10px;
+  margin-top: 2px;
 }
 .report-card-paragraph{
-  margin-top: 20px;
+  margin-top: 15px;
   font-size: 10px;
 }
