--- a/src/components/view/SchemeModule/SchemeModule.css
+++ b/src/components/view/SchemeModule/SchemeModule.css
@@ -19,7 +19,7 @@
 }
 .scheme-boxes-wrapper{
   display: flex;
-  justify-content: space-between;
+  column-gap: 50px;
   align-items: center;
   margin-top: 30px;
 }
@@ -33,20 +33,20 @@
   height: 25px;
 }
 .scheme-wrapper-heading h2{
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 500;
 }
 .scheme-three-box-wrapper{
-  width: 25%;
+  width: 22%;
   display: flex;
   flex-direction: column;
-  row-gap: 15px;
+  row-gap: 25px;
 }
 .box{
   width: 100%;
-  height: 140px;
+  height: 120px;
   background: #fff;
-  padding: 20px 20px;
+  padding: 15px 20px;
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -58,7 +58,7 @@
 .box-heading h2{
   font-size: 13px;
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   
 }
 .box-heading img{
@@ -71,7 +71,7 @@
 }
 .bottom-box{
   display: flex;
-  margin-top: 10px;
+  margin-top: 5px;
   justify-content: space-between;
   align-items: center;
   
@@ -88,7 +88,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 5px;
 }
 .right-bottom-img img{
   width: 25px;
