--- a/src/components/view/TaskTracking/TaskTracking.css
+++ b/src/components/view/TaskTracking/TaskTracking.css
@@ -82,3 +82,11 @@ display: flex;
 .img-wrapper .right-img img{
   width: 25px;
 }
+.active-drag {
+  border: 2px dashed #4a90e2;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0.9;
+  padding: 10px;
+  border-radius: 8px;
+}
